Fix auth header in dark mode

--- a/src/components/auth/auth.styl
+++ b/src/components/auth/auth.styl
@@ -103,6 +103,9 @@
             border-color #373838
             background-color #373838
 
+            h1
+                color #ffffff
+
             li
                 border-color #697278
 
